force-app/main/default/objects/HRCSVC_BOM_Item__c/HRCSVC_BOM_Item__c.object-meta.xml
<CustomObject>
    <label>BOM Item</label>
    <nameField>
        <displayFormat>BOM Item No-{000000}</displayFormat>
        <label>BOM Item No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOM Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>