force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/BOM_Header_Product__c.field-meta.xml
<CustomField>
    <fullName>BOM_Header_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM Header Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOM Items (BOM Header Product)</relationshipLabel>
    <relationshipName>BOM_Header_Product</relationshipName>
    <type>Lookup</type>
</CustomField>