force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/HRCSVC_BOM__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_BOM__c</fullName>
    <label>BOM</label>
    <referenceTo>HRCSVC_BOM__c</referenceTo>
    <relationshipLabel>BOM Items</relationshipLabel>
    <relationshipName>BOM_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>