force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/HRCSVC_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Product_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Model</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>BOM Items</relationshipLabel>
    <relationshipName>BOM_Items</relationshipName>
    <type>Lookup</type>
</CustomField>