force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/HRCSVC_Required__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required?</label>
    <type>Checkbox</type>
</CustomField>