force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/HRCSVC_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair BOM</fullName>
            </value>
            <value>
                <fullName>Tool BOM</fullName>
            </value>
            <value>
                <fullName>Product Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>