force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/Product_Usage_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Usage_Description__c</fullName>
    <label>Product Usage Description</label>
    <length>250</length>
    <type>Text</type>
</CustomField>