force-app/main/default/objects/HRCSVC_BOM_Item__c/fields/Tool_Product_Model__c.field-meta.xml
<CustomField>
    <fullName>Tool_Product_Model__c</fullName>
    <label>Tool Product Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>