force-app/main/default/objects/HRCSVC_BOM_Item__c/recordTypes/Product_Usage.recordType-meta.xml
<RecordType>
    <fullName>Product_Usage</fullName>
    <active>true</active>
    <label>Product Usage</label>
</RecordType>