force-app/main/default/objects/HRCSVC_BOM_Item__c/recordTypes/Repair_BOM.recordType-meta.xml
<RecordType>
    <fullName>Repair_BOM</fullName>
    <active>true</active>
    <label>Repair BOM</label>
</RecordType>