force-app/main/default/objects/HRCSVC_BOM_Item__c/recordTypes/Tool_BOM.recordType-meta.xml
<RecordType>
    <fullName>Tool_BOM</fullName>
    <active>true</active>
    <label>Tool BOM</label>
</RecordType>